# SuperEngineXtreme

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: main.yaml
include/Core/: Core.hpp
include/Core/Game/: DemoGame.hpp  GameBase.hpp  IGame.hpp
include/Core/Scene/: DemoMainScene.hpp  IScene.hpp  SceneBase.hpp
include/ECS/: ComponentManager.hpp  Entity.hpp  EntityManager.hpp  Registry.hpp  SystemManager.hpp  UpdateContext.hpp
include/ECS/Components/: DrawableComponent.hpp  IComponent.hpp  KillOutWindowComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  VelocityComponent.hpp
include/ECS/Events/: ClickEvent.hpp  CloseWindowEvent.hpp  EventBase.hpp  EventCallBack.hpp  IEvent.hpp  KeyCode.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp
include/ECS/Systems/: ASystem.hpp  EventSystem.hpp  FallSystem.hpp  ISystem.hpp  KillOutWindowSystem.hpp  RenderSystem.hpp  VelocitySystem.hpp
include/Exceptions/: ComponentContainerDoesNotExistException.hpp
include/Graphic/: Color.hpp  IDrawable.hpp  IGraphicModule.hpp  IWindow.hpp  Texture.hpp
include/Graphic/Sfml/: SfmlDrawable.hpp  SfmlGraphicModule.hpp  SfmlWindow.hpp
include/Utils/: Chrono.hpp
src/: CMakeLists.txt  main.cpp
src/ComponentManager/: ComponentManager.hpp
src/Components/: PositionComponent.hpp
src/Core/: CMakeLists.txt  Core.cpp
src/Core/Game/: CMakeLists.txt  DemoGame.cpp  GameBase.cpp
src/Core/Scene/: CMakeLists.txt  DemoMainScene.cpp  SceneBase.cpp
src/ECS/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  Registry.cpp  SystemManager.cpp  UpdateContext.cpp
src/ECS/Components/: CMakeLists.txt  DrawableComponent.cpp
src/ECS/Events/: CMakeLists.txt  ClickEvent.cpp  CloseWindowEvent.cpp  EventBase.cpp  EventCallBack.cpp  KeyPressedEvent.cpp  KeyReleasedEvent.cpp
src/ECS/Systems/: CMakeLists.txt  EventSystem.cpp  FallSystem.cpp  RenderSystem.cpp  VelocitySystem.cpp
src/Exceptions/: NotAComponentException.hpp
src/Graphic/: CMakeLists.txt  Color.cpp
src/Graphic/Sfml/: CMakeLists.txt  SfmlDrawable.cpp  SfmlGraphicModule.cpp  SfmlWindow.cpp
src/Utils/: CMakeLists.txt  Chrono.cpp  Vector2.hpp
